--- a/customapi-integration/Jenkinsfile
+++ b/customapi-integration/Jenkinsfile
@@ -10,7 +10,7 @@ def repo = "flyht/gen3"//"edwardviaene/jenkins-course"
 
 def token = httpRequest authentication: 'bitbucket-oauth', contentType: 'APPLICATION_FORM', httpMode: 'POST', requestBody: 'grant_type=client_credentials', url: 'https://bitbucket.org/site/oauth2/access_token'
 def accessToken = jsonParse(token.content).access_token
-def pr = httpRequest customHeaders: [[maskValue: true, name: 'Authorization', value: 'Bearer ' + accessToken]], url: "https://api.bitbucket.org/2.0/repositories/${repo}/pullrequests"
+def pr = httpRequest customHeaders: [[maskValue: true, name: 'Authorization', value: 'Bearer ' + accessToken]], url: "https://api.bitbucket.org/2.0/repositories/${repo}/pullrequests", validResponseCodes: '200:404'
 
 for (p in jsonParse(pr.content).values) { 
     println(p.source.branch.name)
